tests/compile-error/unimplemented_trait_function.kd
type Foo = trait {
    fn foo(*this);
};

type Bar = struct(Foo) {};

fn main(): i32 {
    return 0;
}
